--- a/locales/RU/samlpe_5.xliff
+++ b/locales/RU/samlpe_5.xliff
@@ -108,6 +108,12 @@
 				<note priority="1" from="description">Текст. Название фильтра.</note>
 				<note priority="1" from="meaning">Выпадающее меню, в котором можно выбрать интересующий квест. По умолчанию используется фильтр "Все квесты"</note>
             </trans-unit>
+	    <trans-unit id="2345678">
+                <source xml:space="preserve">Мой коммент</source>
+                <target state="needs-translation" xml:space="preserve"></target>
+				<note priority="1" from="description">фывапмыцвапцыувапмйцукыпам.</note>
+				<note priority="1" from="meaning">ппппппппппппппппппппппппппппппппппппп</note>
+            </trans-unit>
         </body>
     </file>
 </xliff>
